Page MenuHome GnuPG

gpgconf does not list default_pubkey_algo pseudo option anymore
Closed, ResolvedPublic

Description

With GnuPG 2.2.27

$ gpgconf --list-options gpg | grep default_pubkey_algo
default_pubkey_algo:146:3::1:1::"rsa3072/cert,sign+rsa3072/encr::
$ gpgconf --list-options gpgsm | grep default
default_pubkey_algo:146:3::1:1::"RSA-3072::

With GnuPG 2.3.0-beta1613 (resp. master):

$ gpgconf --list-options gpg | grep default_pubkey_algo
$ gpgconf --list-options gpgsm | grep default

In tools/gpgconf-comp.c the option is present in known_options_gpg and known_options_gpgsm and the default is printed with gpg --gpgconf-list resp. gpg --gpgconf-list, but it's missing in the output of gpg --dump-option-table and gpgsm --dump-option-table.

Kleopatra relies on this to show the algorithms that are used by default for new keys/certificates.

Details

Version
master